# fpl-jager-crew

./: Hello.py  initial_setup.py  main.py  main_file.py  prize_fund.csv  pyproject.toml  requirements.txt  sidebar.py  test.ipynb
.github/workflows/: initial_setup.yml
data/: chip_usage.csv  gameweek_info.csv  jager_cup_matches.csv  weekly_scores.csv
streamlit_pages/: chip_usage.py  jager_cup.py  prizes.py  weekly_winnings.py
