[tool.poetry]
name = "fpl-jager-crew"
version = "0.1.0"
description = ""
authors = ["fluidraccoon <danieljcoulton@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.0"
requests = "^2.32.4"
numpy = "^2.3.0"
streamlit = "^1.45.1"
black = "^25.1.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"